themes/supersimple/assets/styles/header.scss
@mixin nav-hover {
    text-decoration: none;
    color: $c5;

    &:hover {
        color: $p7;
    }
}

header {
    $font-size: 1.5rem;
    padding: 3.5rem 0 2rem 0;

    .header {
        padding-bottom: 0.75em;
        border-bottom: 2px solid $c0;
        display: flex;
        gap: 1rem;

        .path-title {
            .title {
                margin-top: 1rem;
                h1 {
                    margin: 0;
                }

                @keyframes slide-up-kf {
                    0% {
                        transform: translateY(0) translateX(0) rotate(0);
                    }
                    100% {
                        transform: translateY(1.5em) translateX(-0.75em) rotate(70deg);
                    }
                }

                &.slide-up {
                    position: relative;

                    h1 {
                        color: transparent;
                        position: absolute;
                        bottom: 0;

                        &::selection {
                            color: $c0;
                        }
                    }

                    .letters {
                        --font-size: 4rem;
                        max-width: 100%;
                        font-size: 0;
                        margin-right: calc(-1 * var(--font-size) * 0.318);
                        pointer-events: none;
                        // overflow: hidden;

                        .word {
                            margin-bottom: -0.75rem;
                            display: inline-block;
                            white-space: nowrap;
                            padding-right: calc(var(--font-size) * 0.318);
                            overflow: hidden;

                            .letter {
                                margin-bottom: 0.75rem;
                                font-size: var(--font-size);
                                @include header-font;
                                display: inline-block;

                                animation-name: slide-up-kf;
                                animation-direction: reverse;
                                animation-duration: 0.7s;
                                animation-timing-function: cubic-bezier(0.94, 0, 0.81, 0);
                                animation-fill-mode: forwards;
                                animation-delay: calc(var(--index) * 50ms);

                                transform-origin: bottom left;
                                transform: translateY(1.5em) translateX(-0.75em) rotate(70deg);
                            }
                        }
                    }

                    &.no-animate {
                        .letters {
                            .word {
                                .letter {
                                    animation-play-state: paused;
                                    animation-delay: -1s;
                                }
                            }
                        }
                    }
                }
            }

            .path {
                @include header-font;
                font-size: $font-size;
                display: flex;
                color: $c5;
                min-height: 1.15em;

                & a {
                    @include nav-hover;
                }
            }

            flex: 1;
        }

        .nav-date {
            text-align: right;
            position: relative;

            ul {
                display: flex;
                flex-direction: row;
                justify-content: flex-end;

                gap: 1.8em;
                padding: 0;
                margin: 0;

                li {
                    @include header-font;
                    list-style-type: none;
                    position: relative;
                    font-size: $font-size;

                    &.current a,
                    &.child a {
                        color: $c0;
                    }

                    &.current a {
                        pointer-events: none;
                    }

                    a {
                        @include nav-hover;
                    }
                }
            }

            time {
                white-space: nowrap;
                position: absolute;
                right: 0;
                bottom: 0;
            }
        }
    }
}

@media screen and (max-width: 800px) {
    header {
        padding: 1.5rem 0 2rem 0;

        .header {
            flex-direction: column-reverse;
            gap: 1.5rem;
            position: relative;

            .path-title {
                .path {
                    min-height: unset;

                    & .separator,
                    & a {
                        margin-top: 1rem;
                    }
                }

                .title {
                    margin-top: 0.5rem;
                    margin-bottom: 1em;
                }

                .title.slide-up .letters {
                    --font-size: 3rem;
                }
            }

            &.no-date {
                .path-title .title {
                    margin-bottom: 0;
                }
            }

            .nav-date {
                position: unset;

                ul {
                    justify-content: space-between;
                }

                time {
                    bottom: 0.25em;
                }
            }
        }
    }
}

@media screen and (max-width: 500px) {
    header .header {
        .path-title {
            .path {
                font-size: 1.1rem;
            }

            .title.slide-up .letters {
                --font-size: 2.5rem;
            }
        }

        .nav-date {
            ul li {
                font-size: 1.1rem;
            }
        }
    }
}

